# FastLIO2-CARLA

./: CMakeLists.txt  README.md  package.xml
config/: carla_velodyne32.yaml
launch/: carla_fastlio2.launch
scripts/: lidar_timestamp_fix_node.py  map_to_init_tf.py  pcl_to_gridmap.py  trajectory_evaluator.py
