<?xml version="1.0"?>
<package format="2">
  <name>fastlio2_carla</name>
  <version>0.0.0</version>
  <description>The fastlio2_carla package</description>

  <maintainer email="u20@todo.todo">u20</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
